# test-hard

./: .bandit  .containerignore  .coverage  .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .hadolint.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.example  .yamllint.yml  CHANGELOG.md  CI_ALL_FIXES_SUMMARY.md  CI_FIXES_ROUND2.md  CI_FIXES_ROUND3.md  CI_PIPELINE_FIXES.md  COMPLETE_OPTIMIZATION_REPORT.md  CONFIGURATION_INDEX.md  CONTRIBUTING.md  Containerfile  DEPLOYMENT.md  DOCUMENTATION-INDEX.md  Dockerfile  Dockerfile.wazuh-indexer  FILES-CREATED.md  FINAL-SUMMARY-FOR-USER.md  FINAL_REPORT.md  FIX_INSTRUCTIONS.md  GIT-COMMIT-MESSAGE.txt  IMMEDIATE_FIXES.sh  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PHASE1-COMPLETE.md  QUICK-USAGE.md  QUICKSTART.md  (+36 more)
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-push.yml  cd.yml  ci.yml  codeql.yml  codex-wazuh.yml  container-scan.yml  dependency-update.yml  deploy.yml  docker-publish.yml  hardening-suite.yml  security-scan.yml
argocd/: README.md  application-dev.yaml  application-prod.yaml  application-staging.yaml
atomic-red-team/: scenarios.yaml
config/wazuh-indexer/: opensearch.yml  security.policy
containers/: entrypoint.sh
containers/astra/: Containerfile
containers/centos/: Containerfile
containers/common/: hardening-entrypoint.sh
containers/fedora/: Containerfile
containers/redos/: Containerfile
containers/ubuntu/: Containerfile
dashboard/: README.md  docker-compose.yml  podman-compose.yml
dashboard/backend/: .containerignore  .flake8  Containerfile  Dockerfile  alembic.ini  requirements.txt  run_scans.py
dashboard/frontend/: .containerignore  Containerfile  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
docker/: entrypoint.sh
docker/altlinux/: Dockerfile
docker/astra/: Dockerfile
docker/centos/: Dockerfile
docker/common/: hardening-entrypoint.sh
docker/debian/: Dockerfile
docker/fedora/: Dockerfile
docker/redos/: Dockerfile  Dockerfile.dockerignore
docker/ubuntu/: Dockerfile
docs/: CHANGELOG.md  CI-CD.md  DEPLOYMENT.md  DEVOPS-IMPROVEMENTS.md  DOCKER_OPTIMIZATIONS.md  DOCKER_QUICK_START.md  DOCUMENTATION-INDEX.md  FAQ.md  FILES-CREATED.md  FINAL-SUMMARY-FOR-USER.md  LOCAL-BUILD.md  LOGGING.md  METRICS.md  NATIVE-INSTALLATION.md  PHASE1-COMPLETE.md  PODMAN_OPTIMIZATIONS.md  PODMAN_QUICK_START.md  PROJECT_PLAN.md  QUICK-USAGE.md  QUICK-USER-SETUP.md  QUICKSTART.md  README-SECURITY-SCANNING.md  README-UPDATES.md  README.md  REAL-HOSTS-SCANNING.md  SECURITY.md  SUMMARY.md  TROUBLESHOOTING.md  USER-GUIDE.md  USER-SETUP.md
environments/openscap/: README.md
environments/osquery-telegraf/: README.md
environments/wazuh/: README.md
falco/: falco.yaml  falcosidekick.yaml
falco/responder/: Containerfile  Dockerfile  responder.py  response_actions.yaml
falco/rules.d/: hardening-rules.yaml
fix-scripts/: 00-metrics.sh  01-profiling.sh  02-encryption.sh  03-kube-proxy.sh  04-vault.sh  05-kyverno-verify.sh  06-trivy-cron.sh  07-netpol.sh  08-pss-sa.sh
grafana/dashboards/: container-image-security.json  falco-runtime-security.json  host-compliance.json  logs-analysis.json  network-discovery.json  network-security.json  security-issues-details.json  security-monitoring.json  security-overview.json  system-resources.json
hardening-scenarios/: README.md  linux.md  windows.md
hardening-scenarios/ansible/: inventory.ini
hardening-scenarios/secaudit/: README.md
k8s/: README.md
k8s/base/: capabilities-config.yaml  encryption-config.yaml  falco.yaml  gatekeeper-policies.yaml  grafana.yaml  image-verification.yaml  kube-bench-config.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  pod-security-admission.yaml  prometheus.yaml  rbac-hardening.yaml  service-mesh.yaml  telegraf.yaml
loki/: loki-config.yml  promtail-config.yml
osquery/: osquery.conf  osquery.yaml  pack.conf
playbooks/: scan-hosts.yml
prometheus/: alert.rules.yml  alertmanager.yml  prometheus.yml
remote-scripts/: approve_csrs.py  distribute_to_workers.py  final_verify_all.py  finish2.py  finish_all.py  fix_apiserver_enc_vol.py  fix_apiserver_kubelet_ca.py  fix_encryption.py  fix_kube_proxy.py  fix_kubelet_all.py  fix_kubelet_serving_cert.py  fix_kyverno_verify.py  fix_netpol.py  fix_netpol_validate_false.py  fix_profiling.py  fix_pss_sa.py  fix_vault_k8s_auth.py  get_apiserver_log.py  reencrypt_secrets.py  vault_generate_root.py  verify_final.py
reports/: 2025-10-21-artifacts-validation.md  2025-10-21-monitoring-dashboard.md  2025-10-21-process-analytics.md  2025-10-21-simulation-results.md  2025-10-21-vm-hardening-validation.md  process-metrics-summary.json
scanners/lynis/: Dockerfile  Dockerfile.dockerignore  entrypoint.sh
scanners/openscap/: .containerignore  Dockerfile  entrypoint-new.sh  entrypoint.py  entrypoint.sh
scripts/: README.md  REORGANIZATION_PLAN.md  backup.sh  fix_prom_metrics.py  generate_mpp_xml.py  health_check.sh  install-deps.sh  measure_docker_improvements.sh  parse_atomic_red_team_result.py  parse_lynis_log.py  parse_lynis_report.py  parse_openscap_report.py  reorganize.sh  run_all_checks.sh  run_atomic_red_team_suite.py  run_atomic_red_team_test.sh  run_hardening_suite.sh  run_lynis.sh  run_openscap.sh  run_shell_tests.sh  scan-remote-host.sh  scan_all_images.py  send_falco_events.py  setup-secure-user.sh  test-core-functionality.sh  verify_fixes.sh
scripts/backup/: README.md  backup.sh
scripts/monitoring/: README.md  health_check.sh  measure_docker_improvements.sh  measure_podman_improvements.sh
scripts/parsing/: README.md  generate_lynis_metrics.py  parse_atomic_red_team_result.py  parse_lynis_log.py  (+2 more)
scripts_backup_20251124_192129/: install-deps.sh  parse_openscap_report.py  run_shell_tests.sh  scan-remote-host.sh
telegraf/: Containerfile  Dockerfile  Dockerfile.dockerignore  telegraf.conf
tempo/: tempo.yaml
tests/: README.md  __init__.py  conftest.py
trivy/: .trivyignore  trivy.yaml
(+286 files in other folders)
